fix pinned message z-index and add max-height to audio input

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -261,6 +261,7 @@ canvas {
   top: 0;
   background-color: white;
   border-bottom: #ABABAB 1px solid;
+  z-index: 500;
 }
 
 .pinned__wrapper {
@@ -581,6 +582,7 @@ canvas {
 .audio__input-wrapper {
   width: 100%;
   height: 100%;
+  max-height: 36px;
   position: relative;
   margin-bottom: 5px;
 }
